--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "prettier": "^2.5.1",
     "vue": "^3.2.25",
+    "vue-query": "^1.14.0",
     "vue-router": "^4.0.12"
   },
   "devDependencies": {
