--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "pinia": "^2.0.8",
     "prettier": "^2.5.1",
     "vue": "^3.2.25",
     "vue-query": "^1.14.0",
